likes diego y cristian 95%

--- a/src/main/webapp/VerIniciativas.xhtml
+++ b/src/main/webapp/VerIniciativas.xhtml
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="Recursos/usuarios.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
     </h:head>
-    <h:body style="overflow-x:hidden; overflow-y:scroll" onload="">
+    <h:body style="overflow-x:hidden; overflow-y:scroll">
         <header>
             <f:metadata>
                  <f:viewAction action="#{iniciativaBean.cambioPagina()}" />
