--- a/src/main/webapp/Registro.xhtml
+++ b/src/main/webapp/Registro.xhtml
@@ -25,26 +25,25 @@
                         <a class="toggleMenu" href="#" style="display: none;">Menu</a>
                          <ul class="nav" style="display: block;">
                                 <li>
-                                     <a href="Inicio.xhtml"><i class="fa fa-home" style="font-size:24px"></i>Inicio</a>
+                                     <a href="Inicio.xhtml"><i class="fa fa-home" style="font-size:35px"></i>Inicio</a>
                                 </li>
                                  <li>
-                                         <a href="inicioSesion.xhtml"><i class="fa fa-user" style="font-size:24px"></i>Iniciar Sesion</a>
+                                         <a href="inicioSesion.xhtml"><i class="fa fa-user" style="font-size:35px"></i>Iniciar Sesion</a>
                                  </li>
                                  <li>
-                                     <a href="Registro.xhtml"><i class=" fa fa-edit" style="font-size:24px" ></i>Registrarse</a>
+                                     <a href="Registro.xhtml"><i class=" fa fa-edit" style="font-size:35px" ></i>Registrarse</a>
                                  </li>
                                 <li>
-                                         <a href=""><i class=" fa fa-phone-square" style="font-size:24px"></i>Contactenos</a>
+                                         <a href=""><i class=" fa fa-phone-square" style="font-size:35px"></i>Contactenos</a>
                                 </li> 
                          </ul>
                      </div>
                  </center>       
             </section>
-            <center>
-                
-                <h:form id="form_registro">
+            <center>  
+                <h:form class="contenedor">
                     <div id="imagenNew">
-                        <img src="Recursos\new.png" width="15%" height="15%" />
+                        <img src="Recursos\new.png" width="23%" height="23%" />
                     </div>
                         <br><p:inputText id="nombre" placeholder="&#128100; Nombre" value="#{registroBean.nombre}"> </p:inputText></br>
                         <br><p:inputText id="correo" placeholder="&#128386; Correo" value="#{registroBean.email}" > </p:inputText></br>
