--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -6,10 +6,10 @@
 	xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title></title>
+        <title>Home</title>
         <link rel="stylesheet" href="Recursos/usuarios.css" />
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+        <link rel="shortcut icon" href="Recursos/favicon.ico" />
     </h:head>
     <h:body style="overflow-x:hidden; overflow-y:scroll" >
 
