--- a/src/main/webapp/Inicio.xhtml
+++ b/src/main/webapp/Inicio.xhtml
@@ -10,6 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
                 <link rel="stylesheet" href="Recursos/login.css" />
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+                <link rel="shortcut icon" href="Recursos/favicon.ico" />
                 
     </h:head>
     <h:body style="overflow-x:hidden;overflow-y: scroll;">
