--- a/src/main/webapp/consultarUsuarios.xhtml
+++ b/src/main/webapp/consultarUsuarios.xhtml
@@ -6,10 +6,12 @@
 	xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title></title>
+        <title>Consultar Usuarios</title>
         <link rel="stylesheet" href="Recursos/usuarios.css" />
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
-	</h:head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+        <link rel="shortcut icon" href="Recursos/favicon.ico" />
+
+    </h:head>
 	 <h:body style="overflow-x:hidden; overflow-y:scroll">
             <header>
                 <div class="contenedorlogos"> 
@@ -24,25 +26,25 @@
                         <a class="toggleMenu" href="#" style="display: none;">Menu</a>
                         <ul class="nav" style="display: block;">
                             <li>
-                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:24px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
+                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:30px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
                             </li>
                             <li>
-                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:24px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
+                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:30px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
                             </li>
                             <li>
-                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:24px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
+                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:30px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
                             </li> 
                             <li>
-                               <h:link outcome="consultarIniciativaRefactor" ><i class="fa fa-search" style="font-size:24px" ></i>Consultar Iniciativas</h:link><!-- Para los 3 roles -->
+                               <h:link outcome="consultarIniciativaRefactor" ><i class="fa fa-search" style="font-size:30px" ></i>Consultar Iniciativas</h:link><!-- Para los 3 roles -->
                             </li> 
                             <li>
-                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:24px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
+                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:30px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
                             </li> 
                             <li>
-                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol != 'Administrador'}" ><i class="fa fa-list" style="font-size:24px"></i>Ver Iniciativas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol != 'Administrador'}" ><i class="fa fa-list" style="font-size:30px"></i>Ver Iniciativas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
-                                <h:link outcome="graficas" onclick="#{chartView.listar()}" ><i class="fa fa-bar-chart" style="font-size:24px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="graficas" onclick="#{chartView.listar()}" ><i class="fa fa-bar-chart" style="font-size:30px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
                                  <h:form>                                                  
@@ -53,24 +55,27 @@
                     </div>
                 </center>       
         </section>
-             
-             <h:form id="UsuariosForm">
-                 <p:dataTable id="usuarios_tabla" var="usuario" value="#{administradorBean.usuarios}" scrollable="true" scrollHeight="300">
-                <p:column headerText="Nombre">
-                            <h:outputText value="#{usuario.nombre}" />
-                </p:column>
-                <p:column headerText="Email">
-                            <h:outputText value="#{usuario.email}" />
-                </p:column>
-                <p:column headerText="Rol">
-                            <h:outputText value="#{usuario.rol}" />
-                </p:column>
-                
-                <p:column headerText="Usuario">
-                    <p:button outcome="perfilUsuario?email=#{usuario.email}" value="Modificar usuario"/>
-                </p:column>
-                </p:dataTable>
-            </h:form>    
+            <br> </br>
+            <center >
+                <h:form id="UsuariosForm" style="width: 1500px">
+                     <p:dataTable id="usuarios_tabla" var="usuario" value="#{administradorBean.usuarios}" scrollable="true" scrollHeight="300">
+                    <p:column headerText="Nombre">
+                                <h:outputText value="#{usuario.nombre}" />
+                    </p:column>
+                    <p:column headerText="Email">
+                                <h:outputText value="#{usuario.email}" />
+                    </p:column>
+                    <p:column headerText="Rol">
+                                <h:outputText value="#{usuario.rol}" />
+                    </p:column>
+                    <p:column headerText="Usuario">
+                        <center>
+                            <p:button outcome="perfilUsuario?email=#{usuario.email}" value="Modificar usuario"/>
+                        </center>
+                    </p:column>
+                    </p:dataTable>
+                </h:form>    
+            </center>
         <footer id="footerinvestigacion">
                 <div class="footercontainer">
                     <div class="direccion">
