--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -9,7 +9,8 @@
         <title>Inicio Sesion</title>
         <link rel="stylesheet" href="Recursos/login.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
-       
+        <link rel="shortcut icon" href="Recursos/favicon.ico" />
+
     </h:head>
     <h:body style="overflow-x:hidden; overflow-y:scroll"> 
         <header>
