--- a/src/main/webapp/perfilIniciativaComment.xhtml
+++ b/src/main/webapp/perfilIniciativaComment.xhtml
@@ -6,9 +6,11 @@
 	xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title></title>
+        <title>Comentarios Iniciativa</title>
 		<link rel="stylesheet" href="Recursos/usuarios.css" />
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+                <link rel="shortcut icon" href="Recursos/favicon.ico" />
+
 	</h:head>
 	<h:body >
             <f:metadata>
@@ -28,26 +30,26 @@
                         <a class="toggleMenu" href="#" style="display: none;">Menu</a>
                         <ul class="nav" style="display: block;">
                             <li>
-                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:24px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
+                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:30px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
                             </li>
                             <li>
-                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:24px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
+                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:30px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
                             </li>
                             <li>
-                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:24px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
+                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:30px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
                             </li> 
                             <li>
-                               <a href="consultarIniciativaRefactor.xhtml"><i class="fa fa-search" style="font-size:24px"></i>Consultar Iniciativas</a>
+                               <a href="consultarIniciativaRefactor.xhtml"><i class="fa fa-search" style="font-size:30px"></i>Consultar Iniciativas</a>
                                <!--<h:link outcome="consultarIniciativaRefactor"><i class="fa fa-search" style="font-size:24px" ></i>Consultar Iniciativas</h:link> Para los 3 roles -->
                             </li> 
                             <li>
-                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:24px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
+                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:30px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
                             </li> 
                             <li>
-                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol == 'Proponente'}" ><i class="fa fa-list" style="font-size:24px"></i>Mis Iniciativas</h:link><!-- para Proponente -->
+                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol == 'Proponente'}" ><i class="fa fa-list" style="font-size:30px"></i>Mis Iniciativas</h:link><!-- para Proponente -->
                             </li>
                             <li>
-                                <h:link outcome="graficas" onclick="#{chartView.listar()}"><i class="fa fa-bar-chart" style="font-size:24px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="graficas" onclick="#{chartView.listar()}"><i class="fa fa-bar-chart" style="font-size:30px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
                                  <h:form>                                                  
@@ -58,25 +60,28 @@
                     </div>
                 </center>       
         </section>
-            
-            <h:form id="UsuariosForm">
-              <p:dataTable id="usuarios_tabla" var="ini" value="#{administradorBean.consultarIniciativa()}">
-                <p:column headerText="Proponente">
-                            <h:outputText value="#{ini.usuario.nombre}" />
-                </p:column> 
-                 <p:column headerText="Descripcion">
-                            <h:outputText value="#{ini.descripcion}" />
-                </p:column> 
-                <p:column headerText="Fecha_Creacion">
-                    <h:outputText value="#{ini.fechaCreacion}" />
-                </p:column>
-                <p:column headerText="Area">
-                            <h:outputText value="#{ini.usuario.area}" />
-                </p:column>
-            </p:dataTable>
-            <br><p:inputTextarea rows="10" cols="40" id="Comentario" placeholder="&#2118; Comentario" value="#{administradorBean.comentario}"> </p:inputTextarea></br>
-            <p:commandButton value="Comentar" actionListener="#{administradorBean.comentarIniciativas(inicioBean.usuario.id)}" action= "home.xhtml" />
-            </h:form>
+            <br> </br>
+            <center>
+                <h:form id="UsuariosForm" style="width:1500px">
+                  <p:dataTable id="usuarios_tabla" var="ini" value="#{administradorBean.consultarIniciativa()}">
+                    <p:column headerText="Proponente">
+                                <h:outputText value="#{ini.usuario.nombre}" />
+                    </p:column> 
+                     <p:column headerText="Descripcion">
+                                <h:outputText value="#{ini.descripcion}" />
+                    </p:column> 
+                    <p:column headerText="Fecha_Creacion">
+                        <h:outputText value="#{ini.fechaCreacion}" />
+                    </p:column>
+                    <p:column headerText="Area">
+                                <h:outputText value="#{ini.usuario.area}" />
+                    </p:column>
+                </p:dataTable>
+                <br> </br>
+                <br><p:inputTextarea rows="10" cols="60" id="Comentario" placeholder="&#2118; Comentario" value="#{administradorBean.comentario}"> </p:inputTextarea></br>
+                <p:commandButton value="Comentar" actionListener="#{administradorBean.comentarIniciativas(inicioBean.usuario.id)}" action= "home.xhtml" />
+                </h:form>
+            </center>
             <footer id="footerinvestigacion">
                 <div class="footercontainer">
                     <div class="direccion">
@@ -90,9 +95,6 @@
                    </div> 
                 </div>
              </footer>
-            
-
-
 	</h:body>
 	
 </html>
