--- a/src/main/webapp/perfilUsuario.xhtml
+++ b/src/main/webapp/perfilUsuario.xhtml
@@ -6,9 +6,11 @@
 	xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title></title>
+        <title>Perfil Usuario</title>
 		<link rel="stylesheet" href="Recursos/usuarios.css" />
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+                <link rel="shortcut icon" href="Recursos/favicon.ico" />
+
 	</h:head>
 	<h:body >
             <f:metadata>
@@ -27,25 +29,25 @@
                         <a class="toggleMenu" href="#" style="display: none;">Menu</a>
                         <ul class="nav" style="display: block;">
                             <li>
-                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:24px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
+                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:30px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
                             </li>
                             <li>
-                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:24px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
+                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:30px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
                             </li>
                             <li>
-                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:24px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
+                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:30px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
                             </li> 
                             <li>
-                               <h:link outcome="consultarIniciativaRefactor" ><i class="fa fa-search" style="font-size:24px" ></i>Consultar Iniciativas</h:link><!-- Para los 3 roles -->
+                               <h:link outcome="consultarIniciativaRefactor" ><i class="fa fa-search" style="font-size:30px" ></i>Consultar Iniciativas</h:link><!-- Para los 3 roles -->
                             </li> 
                             <li>
-                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:24px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
+                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:30px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
                             </li> 
                             <li>
-                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol != 'Administrador'}" ><i class="fa fa-list" style="font-size:24px"></i>Ver Iniciativas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol != 'Administrador'}" ><i class="fa fa-list" style="font-size:30px"></i>Ver Iniciativas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
-                                <h:link outcome="graficas" onclick="#{chartView.listar()}" ><i class="fa fa-bar-chart" style="font-size:24px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="graficas" onclick="#{chartView.listar()}" ><i class="fa fa-bar-chart" style="font-size:30px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
                                  <h:form>                                                  
@@ -56,39 +58,32 @@
                     </div>
                 </center>       
         </section>
-            
-            <h:form id="UsuariosForm">
-              <p:dataTable id="usuarios_tabla" var="usuario" value="#{registroBean.consultarUsuario()}">
-                 <p:column headerText="Nombre">
-                            <h:outputText value="#{usuario.nombre}" />
-                </p:column>
-              <!-- <p:column headerText="Estado">
-                   <p:cellEditor>
-                       <f:facet name="output">  
-                            <h:outputText value="#{administradorBean.estado}" />  
-                        </f:facet> 
-                       <f:facet name="input">
-                            <h:selectOneMenu id="res" value = "#{administradorBean.estado}" > 
-                                <f:selectItems value="#{administradorBean.tipoEstado}" />
-                            </h:selectOneMenu> 
-                        </f:facet>
-                   </p:cellEditor>
-                </p:column> --> 
-                <p:column headerText="Email">
-                    <h:outputText value="#{usuario.email}" />
-                </p:column>
-                <p:column headerText="Rol">
-                    <h:outputText value="#{usuario.rol}" />
-                </p:column>
-                <p:column headerText="Area">
-                    <h:outputText value="#{usuario.area}" />
-                </p:column>
-            </p:dataTable>
-                <h:selectOneMenu id="rol" value = "#{registroBean.rol}" > 
-                    <f:selectItems value="#{registroBean.tipoRol}" />
-                </h:selectOneMenu> 
-                <p:commandButton value="Actualizar" actionListener="#{registroBean.cambiarRol()}" action="consultarUsuarios" />
-            </h:form>
+            <center>
+                <h:form id="UsuariosForm" style="width:1500px" >
+                  <p:dataTable id="usuarios_tabla" var="usuario" value="#{registroBean.consultarUsuario()}">
+                     <p:column headerText="Nombre">
+                                <h:outputText value="#{usuario.nombre}" />
+                    </p:column>
+                    <p:column headerText="Email">
+                        <h:outputText value="#{usuario.email}" />
+                    </p:column>
+                    <p:column headerText="Rol">
+                        <h:outputText value="#{usuario.rol}" />
+                    </p:column>
+                    <p:column headerText="Area">
+                        <h:outputText value="#{usuario.area}" />
+                    </p:column>
+                    </p:dataTable>
+                    <br> </br>
+                    <center>
+                        <h:selectOneMenu id="rol" value = "#{registroBean.rol}" style="height:30px"> 
+                            <f:selectItems value="#{registroBean.tipoRol}" />
+                        </h:selectOneMenu> 
+                        <pre> </pre>
+                        <p:commandButton value="Actualizar" actionListener="#{registroBean.cambiarRol()}" action="consultarUsuarios" />
+                    </center>
+                </h:form>
+            </center>
             <footer id="footerinvestigacion">
                 <div class="footercontainer">
                     <div class="direccion">
