--- a/src/main/webapp/verComentarios.xhtml
+++ b/src/main/webapp/verComentarios.xhtml
@@ -9,6 +9,8 @@
         <title>Ver Comentarios</title>
         <link rel="stylesheet" href="Recursos/usuarios.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+        <link rel="shortcut icon" href="Recursos/favicon.ico" />
+
     </h:head>
     <h:body style="overflow-x:hidden; overflow-y:scroll">
         <header>
@@ -24,25 +26,25 @@
                         <a class="toggleMenu" href="#" style="display: none;">Menu</a>
                         <ul class="nav" style="display: block;">
                             <li>
-                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:24px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
+                                    <a href="home.xhtml"><i class="fa fa-user" style="font-size:30px"></i>#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
                             </li>
                             <li>
-                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:24px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
+                                <h:link outcome="consultarUsuarios" rendered="#{inicioBean.usuario.rol == 'Administrador'}" ><i class="fa fa-address-card" style="font-size:30px"></i>Consultar Usuarios del sistema</h:link><!-- Solo admin -->
                             </li>
                             <li>
-                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:24px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
+                                <h:link outcome="ModificarIniciativas" rendered="#{inicioBean.usuario.rol == 'Administrador'}"><i class="fa fa-bars" style="font-size:30px"></i>Modificar Iniciativas</h:link><!-- Solo admin -->
                             </li> 
                             <li>
-                               <h:link outcome="consultarIniciativaRefactor" ><i class="fa fa-search" style="font-size:24px" ></i>Consultar Iniciativas</h:link><!-- Para los 3 roles -->
+                               <h:link outcome="consultarIniciativaRefactor" ><i class="fa fa-search" style="font-size:30px" ></i>Consultar Iniciativas</h:link><!-- Para los 3 roles -->
                             </li> 
                             <li>
-                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:24px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
+                                <h:link outcome="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}" rendered="#{inicioBean.usuario.rol == 'Proponente'}"><i class=" fa fa-edit" style="font-size:30px" ></i>Nueva Iniciativa</h:link><!-- Solo proponente -->
                             </li> 
                             <li>
-                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol == 'Proponente'}" ><i class="fa fa-list" style="font-size:24px"></i>Mis Iniciativas</h:link><!-- para Proponente -->
+                                <h:link outcome="VerIniciativas" rendered="#{inicioBean.usuario.rol == 'Proponente'}" ><i class="fa fa-list" style="font-size:30px"></i>Mis Iniciativas</h:link><!-- para Proponente -->
                             </li>
                             <li>
-                                <h:link outcome="graficas" onclick="#{chartView.listar()}"><i class="fa fa-bar-chart" style="font-size:24px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
+                                <h:link outcome="graficas" onclick="#{chartView.listar()}"><i class="fa fa-bar-chart" style="font-size:30px"></i>Ver Estadisticas</h:link><!-- para Proponente y publico -->
                             </li>
                             <li>
                                  <h:form>                                                  
@@ -53,23 +55,25 @@
                     </div>
                 </center>       
         </section>
-        
-        <h:form id="iniciativaForm">
-            <p:dataTable id="iniciativa_tabla" rendered="true"  paginator="true" var="comentario" value="#{comentarioBean.getComentarios()}" scrollable="true" scrollHeight="300">
-		<p:column headerText="Comentarista">
-                    <h:outputText value="#{comentario.usuario.nombre}" />
-		</p:column>
-                <p:column headerText="Comentario">
-                    <h:outputText value="#{comentario.comentario}" />
-		</p:column>
-                <p:column headerText="Fecha Publicacion">
-                    <h:outputText value="#{comentario.fecha_publicacion}" />
-		</p:column>
-                <p:column headerText="Iniciativa">
-                    <h:outputText value="#{comentario.iniciativa.id}" />
-		</p:column>
-            </p:dataTable>
-        </h:form>
+        <br> </br>
+        <center>
+            <h:form id="iniciativaForm">
+                <p:dataTable id="iniciativa_tabla" rendered="true"  paginator="true" var="comentario" value="#{comentarioBean.getComentarios()}" scrollable="true" scrollHeight="300" style="width: 1500px">
+                    <p:column headerText="Comentarista">
+                        <h:outputText value="#{comentario.usuario.nombre}" />
+                    </p:column>
+                    <p:column headerText="Comentario">
+                        <h:outputText value="#{comentario.comentario}" />
+                    </p:column>
+                    <p:column headerText="Fecha Publicacion">
+                        <h:outputText value="#{comentario.fecha_publicacion}" />
+                    </p:column>
+                    <p:column headerText="Iniciativa">
+                        <h:outputText value="#{comentario.iniciativa.id}" />
+                    </p:column>
+                </p:dataTable>
+            </h:form>
+        </center>
                 <footer id="footerinvestigacion">
                 <div class="footercontainer">
                     <div class="direccion">
