--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -3,14 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+        xmlns:p="http://primefaces.org/ui"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <h:head>
         <title>Inicio Sesion</title>
         <link rel="stylesheet" href="Recursos/login.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
         <link rel="shortcut icon" href="Recursos/favicon.ico" />
-
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </h:head>
     <h:body style="overflow-x:hidden; overflow-y:scroll"> 
         <header>
@@ -45,6 +46,7 @@
             
         <center>
             <h:form class="contenedor">
+                <p:growl id="growl" showDetail="true" sticky="true"  />
                 <div id="imagenLog">
                     <img src="Recursos\login.png" width="20%" height="20%" />
                 </div>
@@ -55,7 +57,7 @@
                         <br><p:inputText id="contrasena"  placeholder="&#128272; Contraseña" type="password" value="#{inicioBean.contrasena}" > </p:inputText></br>
                 </div>
                 <div id="Botones">
-                        <p:commandButton  id ="enviar"  value="login" actionListener="#{inicioBean.consultar(inicioBean.email)}"  action= "home" />  
+                    <p:commandButton  id ="enviar"  value="login" actionListener="#{inicioBean.consultar(inicioBean.email)}"  action= "#{inicioBean.irHome()}" update="@form" />  
                 </div>
             </h:form>
         </center>
