--- a/src/main/webapp/consultarIniciativaRefactor.xhtml
+++ b/src/main/webapp/consultarIniciativaRefactor.xhtml
@@ -15,7 +15,7 @@
                 <f:viewAction action="#{iniciativaBean.cambioPagina()}" />
         </f:metadata>
     </h:head>
-    <h:body style="overflow-x:hidden; overflow-y:hidden">
+    <h:body style=" overflow-y:hidden">
         <header>
                 <div class="contenedorlogos"> 
                     <div id="logoescuela">
