--- a/src/main/webapp/Registro.xhtml
+++ b/src/main/webapp/Registro.xhtml
@@ -43,6 +43,7 @@
             </section>
             <center>  
                 <h:form class="contenedor">
+                    <p:panel> 
                     <div id="imagenNew">
                         <img src="Recursos\new.png" width="23%" height="23%" />
                     </div>
@@ -52,8 +53,9 @@
 
                         <br><p:inputText id="contrasena" placeholder="&#128272; Contraseña" type="password" value="#{registroBean.contrasena}"> </p:inputText></br>
                         <div id="Botones">
-                            <p:commandButton  value="Registrarse" actionListener="#{registroBean.registrarUsuario(registroBean.nombre,registroBean.email,registroBean.contrasena,registroBean.area)}" action="inicioSesion.xhtml" />
+                            <p:commandButton styleClass="registrar" value="Registrarse" actionListener="#{registroBean.registrarUsuario(registroBean.nombre,registroBean.email,registroBean.contrasena,registroBean.area)}" action="inicioSesion.xhtml" />
                         </div>
+                      </p:panel> 
                 </h:form>
             </center>
             <footer id="footerinvestigacion">
