--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -12,7 +12,7 @@
         <link rel="shortcut icon" href="Recursos/favicon.ico" />
     </h:head>
     <h:body style="overflow-x:hidden; overflow-y:scroll" >
-
+            
         <header>
                 <div class="contenedorlogos"> 
                     <div id="logoescuela">
@@ -57,7 +57,15 @@
                     </div>
                 </center>       
         </section>
-        
+        <section id="slider">
+
+            <center><img src="/Recursos/home.jpg" width="100%"  alt=""></img></center>
+
+                <div class="franjaverde">
+                    <h1>Bienvenido Al Banco De Iniciativas<br>De La Escuela Colombiana De Ingenieria</br></h1>
+                </div>
+
+            </section>
         <footer id="footerinvestigacion">
                 <div class="footercontainer">
                     <div class="direccion">
