--- a/src/main/webapp/perfilIniciativa.xhtml
+++ b/src/main/webapp/perfilIniciativa.xhtml
@@ -68,7 +68,9 @@
                         Iniciativa
                     </f:facet>
                     <p:column headerText="Nombre Proponente">
+                        <center>
                             <h:outputText value="#{ini.usuario.nombre}" />
+                        </center>
                     </p:column>
                      <p:column headerText="Descripcion">
                                 <h:outputText value="#{ini.descripcion}" />
@@ -77,10 +79,14 @@
                         <h:outputText value="#{ini.fechaCreacion}" />
                     </p:column>
                     <p:column headerText="Area">
-                                <h:outputText value="#{ini.usuario.area}" />
+                        <center>
+                            <h:outputText value="#{ini.usuario.area}" />
+                        </center>
                     </p:column>
                     <p:column headerText="Palabras clave">
-                        <h:outputText value="#{ini.palabrasClave}" />
+                        <center>
+                            <h:outputText value="#{ini.palabrasClave}" />
+                        </center>
                     </p:column>
                 </p:dataTable>
                 <br> </br>
@@ -97,7 +103,9 @@
                     Iniciativas Relacionadas
                 </f:facet>
                 <p:column headerText="Proponente">
-                    <h:outputText value="#{ini.usuario.nombre}" />
+                    <center>
+                        <h:outputText value="#{ini.usuario.nombre}" />
+                    </center>
                 </p:column>
                 <p:column headerText="Descripcion">
                     <h:outputText value="#{ini.descripcion}" />
@@ -106,10 +114,14 @@
                     <h:outputText value="#{ini.fechaCreacion}" />
                 </p:column>
                 <p:column headerText="Area">
-                    <h:outputText value="#{ini.usuario.area}" />
+                    <center>
+                        <h:outputText value="#{ini.usuario.area}" />
+                    </center>
                 </p:column>
                 <p:column headerText="Palabras clave">
-                    <h:outputText value="#{ini.palabrasClave}" />
+                    <center>
+                        <h:outputText value="#{ini.palabrasClave}" />
+                    </center>
                 </p:column>
                 </p:dataTable>
             </h:form>
